// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of PrioritizationCopy Component - checks if component renders This tract is considered disadvantaged because it meets 1 burden threshold AND the associated socio-economic threshold. when totCats = 2, totBurds = 1, isAdj = false, isAdjLI = false, tribal % = null, 1`] = `
<DocumentFragment>
  <div>
    This tract is considered disadvantaged because it meets 1 burden threshold AND the associated socio-economic threshold.
  </div>
</DocumentFragment>
`;

exports[`rendering of PrioritizationCopy Component - checks if component renders This tract is considered disadvantaged because it meets more than 1 burden threshold AND the associated socio-economic threshold. when totCats = 2, totBurds = 5, isAdj = false, isAdjLI = false, tribal % = null, 1`] = `
<DocumentFragment>
  <div>
    This tract is considered disadvantaged because it meets more than 1 burden threshold AND the associated socio-economic threshold.
  </div>
</DocumentFragment>
`;

exports[`rendering of PrioritizationCopy Component - checks if component renders This tract is not considered disadvantaged. It does not meet any burden thresholds OR at least one associated socio-economic threshold. when totCats = 0, totBurds = 0, isAdj = false, isAdjLI = false, tribal % = null, 1`] = `
<DocumentFragment>
  <div>
    This tract is not considered disadvantaged. It does not meet any burden thresholds OR at least one associated socio-economic threshold.
  </div>
</DocumentFragment>
`;

exports[`rendering of PrioritizationCopy Component - checks if component renders This tract is not considered disadvantaged. It meets 1 burden threshold BUT no associated socio-economic thresholds. when totCats = 0, totBurds = 1, isAdj = false, isAdjLI = false, tribal % = null, 1`] = `
<DocumentFragment>
  <div>
    This tract is not considered disadvantaged. It meets 1 burden threshold BUT no associated socio-economic thresholds.
  </div>
</DocumentFragment>
`;

exports[`rendering of PrioritizationCopy Component - checks if component renders This tract is not considered disadvantaged. It meets more than 1 burden threshold BUT no associated socio-economic thresholds. when totCats = 0, totBurds = 5, isAdj = false, isAdjLI = false, tribal % = null, 1`] = `
<DocumentFragment>
  <div>
    This tract is not considered disadvantaged. It meets more than 1 burden threshold BUT no associated socio-economic thresholds.
  </div>
</DocumentFragment>
`;
